# rust-vue-demo

./: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json
src/: main.rs
webui/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vue.config.js
webui/src/: App.vue  components.d.ts  main.js
webui/src/components/: MessageMonitor.vue
webui/src/components/layouts/: BaseSide.vue
